<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:drawable/dialog_holo_light_frame">


    <TextView
        android:id="@+id/learn_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learnCards"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/quiz_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/test_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schriftlicher_test"
        android:textStyle="bold"
        android:textSize="16sp"
        />




</LinearLayout>
