<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CardsViewActivity"
    android:background="@color/design_default_color_on_primary"
    >

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/skipNextButton"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/baseline_navigate_next_24"
        android:contentDescription="@string/next" />

    <ImageButton
        android:id="@+id/skipNextButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/baseline_skip_next_24"
        android:contentDescription="@string/skip_next" />

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/skipPrevButton"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/baseline_navigate_before_24"
        android:contentDescription="@string/before" />

    <ImageButton
        android:id="@+id/skipPrevButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/baseline_skip_previous_24"
        android:contentDescription="@string/skip_before" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="346dp"
        android:layout_height="559dp"
        android:layout_marginTop="4dp"
        android:background="@color/cardBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" >

    </androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>

